--- a/templates/home/profil.html.twig
+++ b/templates/home/profil.html.twig
@@ -11,7 +11,7 @@
         <li><a data-toggle="tab" href="#dashboard" class="list-group-item list-group-item-action active">Tableau de bord</a></li>
         <li><a data-toggle="tab" href="#reservations" class="list-group-item list-group-item-action">Mes réservations</a></li>
         <li><a data-toggle="tab" href="#messages" class="list-group-item list-group-item-action">Messages</a></li>
-        <li><a data-toggle="tab" href="#informations" class="list-group-item list-group-item-action">Mes informations</a></li>
+        <li><a data-toggle="tab" href="#informations" class="list-group-item list-group-item-action">Mon Profil</a></li>
       </ul>
     </div>
     <div class="col-md-8 offset-md-1">
@@ -93,46 +93,59 @@
             <div class="tab-pane" id="informations">
              <div class="row">
               <div class="col-md-12">
-                <h4>Mes informations</h4>
+                <h4>Mon profil</h4>
                 <hr>
+                {% for flash_message in app.session.flashBag.get('error') %}
+                    <div class="alert alert-danger">
+                        {{ flash_message }}
+                    </div>
+                {% endfor %}
+                {% for flash_message in app.session.flashBag.get('success') %}
+                    <div class="alert alert-success">
+                        {{ flash_message }}
+                    </div>
+                {% endfor %}
+                {{ form_start(form) }}
+                  <div class="form-group row">
+                    {{ form_label(form.nom)}}
+                    <div class="col-8">
+                      {{ form_widget(form.nom)}}
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    {{ form_label(form.prenom)}}
+                    <div class="col-8">
+                      {{ form_widget(form.prenom)}}
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    {{ form_label(form.email)}}
+                    <div class="col-8">
+                      {{ form_widget(form.email)}}
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    {{ form_label(form.telephone)}}
+                    <div class="col-8">
+                      {{ form_widget(form.telephone)}}
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    {{ form_label(form.adresse)}}
+                    <div class="col-8">
+                      {{ form_widget(form.adresse)}}
+                    </div>
+                  </div>
+                  <div class="form-group now">
+                    <div class="col-8">
+                      {{ form_widget(form.newsletter)}}&nbsp;&nbsp;J'accepte de recevoir les newsletter d'Atypik'House.
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                      <button name="submit" type="submit" class="btn btn-success">Mettre à jour mon profil</button>
+                  </div>
+                {{ form_end(form) }}
               </div>
-              <form>
-                <div class="form-group row">
-                  <label for="username" class="col-4 col-form-label">Nom*</label> 
-                  <div class="col-8">
-                    <input value="{{ app.user.getNom() }}"  id="nom" name="nom" placeholder="Nom" class="form-control here" required="required" type="text">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label for="name" class="col-4 col-form-label">Prénom</label> 
-                  <div class="col-8">
-                    <input value="{{ app.user.getPrenom() }}"  id="prenom" name="prenom" placeholder="Prenom" class="form-control here" required="required" type="text">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label for="email" class="col-4 col-form-label">Email*</label> 
-                  <div class="col-8">
-                    <input value="{{ app.user.getTelephone() }}"  id="email" name="email" placeholder="Email" class="form-control here" required="required" type="text">
-                  </div>
-                </div>
-                <div class="form-group row">  
-                  <label for="name" class="col-4 col-form-label">Téléphone</label> 
-                  <div class="col-8">
-                    <input value="{{ app.user.getTelephone() }}" id="metier" name="metier" placeholder="Metier" class="form-control here" required="required" type="text">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label for="website" class="col-4 col-form-label">Adresse</label> 
-                  <div class="col-8">
-                    <input value="{{ app.user.getAdresse() }}"  id="adresse" name="adresse" placeholder="Adresse" class="form-control here" type="text">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <div class="offset-4 col-8">
-                    <button name="submit" type="submit" class="btn btn-success">Mettre à jour mon profil</button>
-                  </div>
-                </div>
-              </form>
             </div>
           </div>
           {# Messages #}
