--- a/templates/logement/index.html.twig
+++ b/templates/logement/index.html.twig
@@ -10,8 +10,8 @@
 {% endfor %}
 
 <div id="bandeau-logement">
-  <button type="button" class="btn btn-photo" onclick="openModal();currentSlide(1)">Voir les photos</button>
-  <img src="/uploads/logements/{{logement.id}}/{{photos[0].photo}}" />
+  {% if photos is not empty %}<button type="button" class="btn btn-photo" onclick="openModal();currentSlide(1)">Voir les photos</button>{% endif %}
+  <img src="{% if photos is not empty %}/uploads/logements/{{logement.id}}/{{photos[0].photo}}{% else %}/img/types-habitat/{{ logement.getIdType().getPathImg() }}{% endif %}" />
 </div>
 
 {# CAROUSEL #}
@@ -155,26 +155,20 @@
           <button type="submit" class="btn btn-recherche " onclick="location.href='{{ path('logement_reservation', {'id': logement.id }) }}'">Réserver</button>
         </form>
       </div>
-
       <div class="hote">
         <h4 class="sous-titre"> Votre hôte </h4>
-
         <img class="icone-proprio" src="/img/picto/proprio.svg" />
         <p class="nom-hote">Nom de l'hôte</p>
-        <p class="logement-hote">Hôte {{ logement.nom }}</p>
+        <p class="logement-hote">{{ logement.getIdProprietaire() }}</p>
         <button type="submit" class="btn btn-recherche">Contacter</button>
-
-
       </div>
     </div>
   </div>
 </div>
-
 </div>
 </div>
 </div>
 </div>
 </div>
 </div>
-
 {% endblock %}
