--- a/templates/logement/index.html.twig
+++ b/templates/logement/index.html.twig
@@ -109,11 +109,16 @@
       </div>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5737941.053577054!2d-0.5600409326626958!3d45.39463663443821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ab22a7cd2b8547%3A0xe10e3cdc7f734cdc!2sLes+cabanes+dans+les+arbres!5e0!3m2!1sfr!2sfr!4v1544963589952"
         height="400" frameborder="0" style="border:0; width: 100%" allowfullscreen></iframe>
-
+      
       <h4 class="sous-titre"> Avis des voyageurs</h4>
-
-
-
+      {% if commentaires is not empty %}
+        boucle commentaires
+      {% else %}
+          Aucun avis n'a ajouté
+      {% endif %}
+      {% if reservations is not empty %}
+        Ajouter comm
+      {% endif %}
     </div>
     <div class="col">
       <div class="resa">
