login pas compte #9

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,11 +13,12 @@
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
+
         <h3 class="h3 mb-3 font-weight-normal">Connectez-vous !</h3>
-        <label for="inputEmail" class="sr-only">Adresse Email</label>
+        <label for="inputEmail">Adresse Email</label>
         <input type="email" value="{{ last_username }}" name="_username" id="inputEmail" class="form-control" placeholder="Votre adresse e-mail" required autofocus>
         <br>
-        <label for="inputPassword" class="sr-only">Mot de passe</label>
+        <label for="inputPassword">Mot de passe</label>
         <input type="password" name="_password" id="inputPassword" class="form-control" placeholder="Votre mot de passe" required>
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
         <br>
@@ -25,5 +26,7 @@
             Se connecter
         </button>
     </form>
+    <h5>Vous n’avez pas de compte ? <a href="/register">Inscription</a></h5>
+
 </div>
 {% endblock %}
