Modifications des contrôle + * #9

--- a/templates/logement/ajout-logement.html.twig
+++ b/templates/logement/ajout-logement.html.twig
@@ -30,7 +30,7 @@
                 {{ form_row(form.adresse) }}
             </div>
             <div class="form-group">
-                <label for="logement_ville">Ville</label>
+                <label for="logement_ville">Ville *</label>
                 <input type="text" class="form-control" autocomplete="off" id="logement_ville" name="logement_ville" required="required"/>
             </div>
             <div class="form-group" required="required">
