--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,7 @@
       {% if is_granted('IS_AUTHENTICATED_FULLY') %}
         <div class="d-none d-lg-block">
           <ul class="nav navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item  ajouterBien">
               <a class="btn btn-success" href="{{ path('logement_ajout') }}">Ajouter un bien</a>
             </li>
             <li class="nav-item">
@@ -76,7 +76,7 @@
     </div>
       {% else %}
       <ul class="nav navbar-nav"> 
-        <li class="nav-item">
+        <li class="nav-item ajouterBien">
             <a class="btn btn-success" href="{{ path('logement_ajout') }}">Ajouter un bien</a>
         </li>       
         <li class="nav-item">
