--- a/templates/logement/reservation.html.twig
+++ b/templates/logement/reservation.html.twig
@@ -89,7 +89,7 @@
                     <div id="card-element"></div>                        
                 </div>                
                 <div class="form-group">
-                    <button class="btn btn-success" type="submit">Payer</button>
+                    <button class="btn btn-success btnReservation" type="submit">Payer</button>
                 </div>
             </form>
         </div>       
