Modification Newsletter dans formulaire Inscription #9

--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -70,7 +70,13 @@
                 <br>
                 <div class="row">
                     <div class="col">
-                        {{ form_widget(form.cgv) }}&nbsp;&nbsp; J'accepte les <a href="/downloads/cgu.pdf" target="_blank">Condiions Générale d'Utilisation.</a>
+                        {{ form_widget(form.cgv) }}&nbsp;&nbsp; J'accepte les <a href="/downloads/cgu.pdf" target="_blank">Conditions Générale d'Utilisation.</a>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col">
+                        {{ form_widget(form.newsletter) }}&nbsp;&nbsp; Recevoir les newsletter.
                     </div>
                 </div>
                 <br>
