--- a/templates/logement/index.html.twig
+++ b/templates/logement/index.html.twig
@@ -232,7 +232,42 @@
         <img class="icone-proprio" src="/img/picto/proprio.svg" />
         <p class="nom-hote">Nom de l'hôte</p>
         <p class="logement-hote">{{ logement.getIdProprietaire() }}</p>
-        <button type="submit" class="btn btn-recherche">Contacter</button>
+        <button type="button" class="btn btn-recherche" data-toggle="modal" data-target="#contactProprio">Contacter</button>
+        <div class="modal fade" id="contactProprio" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Contacter le propriétaire - {{ logement.getIdProprietaire() }} </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <form action="{{ path('contacter_proprio_route', {'id': logement.id}) }}" method="post">
+                <div class="modal-body">
+                  <div class="col-sm-12">
+                    
+                      <div class="form-group row">
+                          <label for="objet" class="col-sm-3 col-form-label">Objet *</label>
+                            <div class="col-sm-8">
+                              <input type="text" class="form-control" name="objet" id="objet" required />
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                          <label for="contenu" class="col-sm-3 col-form-label">Contenu *</label>
+                            <div class="col-sm-8">
+                              <textarea class="form-control" name="contenu" id="contenu" required ></textarea>
+                            </div>
+                        </div>
+                  </div>
+                </div>                
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                  <button type="submit" class="btn btn-success">Envoyer message</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
