--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,7 +38,7 @@
               <a class="btn btn-success" href="{{ path('logement_ajout') }}">Ajouter un bien</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/register"><img id="cloche" src="/img/header/cloche.png"></a>
+              <a class="nav-link" href="/profil#messages"><img id="cloche" src="/img/header/cloche.png"></a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="Utilisateur" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
