--- a/templates/admin/utilisateur/utilisateur-apercu.html.twig
+++ b/templates/admin/utilisateur/utilisateur-apercu.html.twig
@@ -1,54 +1,35 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Utilisateur{% endblock %}
-
 {% block body %}
-    <h1>Utilisateur</h1>
-
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ utilisateur.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ utilisateur.nom }}</td>
-            </tr>
-            <tr>
-                <th>Prenom</th>
-                <td>{{ utilisateur.prenom }}</td>
-            </tr>
-            <tr>
-                <th>Adresse</th>
-                <td>{{ utilisateur.adresse }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ utilisateur.email }}</td>
-            </tr>
-            <tr>
-                <th>Telephone</th>
-                <td>{{ utilisateur.telephone }}</td>
-            </tr>
-            <tr>
-                <th>Password</th>
-                <td>{{ utilisateur.password }}</td>
-            </tr>
-            <tr>
-                <th>ValideUser</th>
-                <td>{{ utilisateur.valideUser ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>TokenUser</th>
-                <td>{{ utilisateur.tokenUser }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('utilisateur_index') }}">back to list</a>
-
-    <a href="{{ path('utilisateur_edit', {'id': utilisateur.id}) }}">edit</a>
-
-    {{ include('utilisateur/_delete_form.html.twig') }}
+    <div class="container">
+        <div class="row mx-auto my-2">
+            <a href="{{ path('utilisateur_liste') }}">Retour</a>
+        </div>
+        <h1>Utilisateur</h1>
+        <table class="table">
+            <tbody>
+                <tr>
+                    <th>Nom</th>
+                    <td>{{ utilisateur.nom }}</td>
+                </tr>
+                <tr>
+                    <th>Prenom</th>
+                    <td>{{ utilisateur.prenom }}</td>
+                </tr>
+                <tr>
+                    <th>Adresse</th>
+                    <td>{{ utilisateur.adresse }}</td>
+                </tr>
+                <tr>
+                    <th>Email</th>
+                    <td>{{ utilisateur.email }}</td>
+                </tr>
+                <tr>
+                    <th>Telephone</th>
+                    <td>{{ utilisateur.telephone }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
