--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <title>{% block title %}{% endblock %} &bull; Atypik'House</title>
   <link rel="icon" type="image/png" href="/img/logo.png" />
   {% block stylesheet %}
