--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -546,8 +546,8 @@ h2.contactTitle {
 }
 
 #map {
-	width: auto;
-	height: auto;
+	width: 100%;
+	height: 350px;
 	background-color: lightgray;
 }
 
