--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="/css/jquery-ui.min.css">
   <link rel="stylesheet" href="/css/styles.css">
   <link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+      crossorigin="" />
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+      crossorigin=""></script>
   {% endblock %}
 </head>
 
@@ -119,10 +123,10 @@
         <div class="col-md-2 mx-auto">
           <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Top hébergement</h5>
           <ul class="list-unstyled">
-            <li><a href="">Dormir dans une cabane</a></li>
-            <li><a href="">Dormir dans une bulle</a></li>
-            <li><a href="">Dormir dans une yourte</a></li>
-            <li><a href="">Dormir dans une roulotte</a></li>
+            <li><a href="/categorie-logement/2">Dormir dans une cabane</a></li>
+            <li><a href="/categorie-logement/7">Dormir dans une bulle</a></li>
+            <li><a href="/categorie-logement/1">Dormir dans une yourte</a></li>
+            <li><a href="/categorie-logement/3">Dormir dans une roulotte</a></li>
           </ul>
         </div>
 
@@ -132,7 +136,6 @@
           <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Liens utiles</h5>
           <ul class="list-unstyled">
             <li><a href="">Mentions légales</a></li>
-            <li><a href="">Qui sommes nous</a></li>
             <li><a href="{{ path('contact_route') }}">Contactez nous</a></li>
           </ul>
         </div>
