--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -25,7 +25,7 @@
                                         <a href="/categorie-logement/{{ t.id }}"><img class="d-block w-100" src="/img/types-habitat/{{ t.pathimg }}" alt="Péniche"></a>
                                         <div class="my-captions">
                                             <h5>{{ t.type }}</h5>
-                                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                                            <p>Rechercher des {{ t.type|lower }}.</p>
                                         </div>
                                     </div>
                                     {% if 8 is divisible by(t.id) and t.id > 2 and t.id < 8 %}
