--- a/templates/logement/index.html.twig
+++ b/templates/logement/index.html.twig
@@ -111,8 +111,26 @@
         {% endif %}
 
       </div>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5737941.053577054!2d-0.5600409326626958!3d45.39463663443821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ab22a7cd2b8547%3A0xe10e3cdc7f734cdc!2sLes+cabanes+dans+les+arbres!5e0!3m2!1sfr!2sfr!4v1544963589952"
-        height="400" frameborder="0" style="border:0; width: 100%" allowfullscreen></iframe>
+      {#<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5737941.053577054!2d-0.5600409326626958!3d45.39463663443821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ab22a7cd2b8547%3A0xe10e3cdc7f734cdc!2sLes+cabanes+dans+les+arbres!5e0!3m2!1sfr!2sfr!4v1544963589952"
+        height="400" frameborder="0" style="border:0; width: 100%" allowfullscreen></iframe>#}
+      <div id="map"></div>
+      <script type="text/javascript">
+        var lat = {{ logement.getVille().getLatitude() }};
+        var lon = {{ logement.getVille().getLongitude() }};
+        var macarte = null;
+        function initMap() {
+          macarte = L.map('map').setView([lat, lon], 13);
+          L.tileLayer('https://{s}.tile.openstreetmap.fr/osmfr/{z}/{x}/{y}.png', {
+              attribution: 'données © <a href="//osm.org/copyright">OpenStreetMap</a>/ODbL - rendu <a href="//openstreetmap.fr">OSM France</a>',
+              minZoom: 1,
+              maxZoom: 20
+          }).addTo(macarte);
+          var marker = L.marker([lat, lon]).addTo(macarte);
+        }
+        window.onload = function(){
+          initMap(); 
+        };
+      </script>
       <div class="row">
         <div class="comments col-md-11 offset-md-1" id="commentaires">
           <h4 class="sous-titre mb-2"> Avis des voyageurs</h4>
