--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,6 +50,9 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="/profil#informations">Mes informations</a>
                   <a class="dropdown-item" href="/profil#reservations">Mes réservations</a>
+                  {% if 'ROLE_PROPRIO' in app.user.getRoles() %}
+                    <a class="dropdown-item" href="/profil#logements">Mes logements</a>
+                  {% endif %}
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="/logout">Déconnexion</a>
                 </div>
