--- a/templates/logement/modifier-logement.html.twig
+++ b/templates/logement/modifier-logement.html.twig
@@ -1,27 +1,23 @@
 {% extends 'base.html.twig' %}
-{% block title %}Ajout d'un logement{% endblock %}
-
+{% block title %}Mise à jour : {{ logement.getNom()|capitalize }}{% endblock %}
 {% block body %}
     <div id="formulaire">
         <img src="/img/chair.jpeg"/>
     </div>
     <div class="container">
-        <h3>Ajoutez votre bien !</h3>
+        <h3>{{ logement.getNom() }}</h3>        
         {% for flash_message in app.session.flashBag.get('error') %}
             <div class="alert alert-error">
                 {{ flash_message }}
             </div>
-        {% endfor %}   
+        {% endfor %}
+        {% for flash_message in app.session.flashBag.get('success') %}
+            <div class="alert alert-success">
+                {{ flash_message }}
+            </div>
+        {% endfor %}
         <br>
         {{ form_start(form) }}
-            {% if app.user.getSiret() is empty %}
-                <div class="form-row">
-                    <div>
-                        <label for="siret" class="required">Entrez votre numéro de SIRET *</label>
-                        <input type="text" required name="siret" id="siret" class="form-control" />
-                    </div>
-                </div>
-            {% endif %}
             <div class="form-group" >
                 {{ form_row(form.id_type) }}
             </div>
@@ -36,7 +32,7 @@
             </div>
             <div class="form-group">
                 <label for="logement_ville">Ville *</label>
-                <input type="text" class="form-control" autocomplete="off" id="logement_ville" name="logement_ville" required="required"/>
+                <input type="text" value="{{ logement.getVille().getNom() }}" class="form-control" autocomplete="off" id="logement_ville" name="logement_ville" required="required"/>
             </div>
             <div class="form-group" required="required">
                 {{ form_row(form.prix) }}
@@ -60,7 +56,7 @@
             <h4>Paramètres de l'habitat</h4>
             <div id="parametres"></div>
             <br>
-            <button class="btn btn-success btn-lg ml-auto d-flex">Ajoutez votre bien</button>
+            <button class="btn btn-success btn-lg ml-auto d-flex">Modifier votre bien</button>
         {{ form_end(form) }}
     </div>
 {% endblock %}
